# azure-aks-platform-blueprint

./: .gitignore  AGENTS.md  README.md
.github/: dependabot.yaml
.github/scripts/: github_repo_bootsrap.sh
.github/workflows/: boutique-app-images.yaml  codeql.yaml  helm-package.yaml  iac-security.yaml  k8s-render-validation.yaml  portfolio-static-site.yaml  secret-scan.yaml  workflow-yaml-validation.yaml
apps/boutique-app/: Makefile  README.md  docker-compose.yaml
apps/platform-monitoring-dashboard/: README.md
diagrams/: infrastructure-architecture.mmd
diagrams/portfolio/: AKS_workload_runtime.drawio  Azure_architecture.drawio  Azure_platform.drawio
docs/: aks-ha-autoscaling-plan.md  architecture.md  ci-cd.md  database-security.md  enterprise-shared-aks-implementation-plan.md  keyvault-certificate-import.md  keyvault-envoy-tls-manual-certificate.md  network-plan.md  observability.md  project-validation-plan.md  security.md  tenant-intake-form.md  terraform-refactor-plan.md  troubleshooting.md
helm/: README.md
helm/platform-app-service/: Chart.yaml  values.schema.json
helm/platform-service/: Chart.yaml  values.yaml
k8s/: README.md
k8s/gateway/: README.md  gateway.yaml  keyvault-tls-sync.yaml
k8s/tenants/: README.md
platform/extension-sdk/python/: README.md  pyproject.toml
platform/extension-sdk/python/src/aks_platform_sdk/: __init__.py  credential.py  key_vault.py  platform_client.py  platform_config.py  sql_database.py  telemetry.py
scripts/: bootstrap-flux.sh  build-and-push-images.sh  package-and-push-helm.sh
(+308 files in other folders)
