[project]
name = "aks-platform-sdk"
version = "0.1.0"
description = "Python platform SDK for the Azure AKS platform blueprint."
requires-python = ">=3.11"
dependencies = [
  "azure-identity>=1.17.0",
  "azure-keyvault-secrets>=4.8.0",
  "azure-monitor-opentelemetry>=1.6.0",
  "pyodbc>=5.1.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
